--- a/2/Lab-XSS-RubyonRails/app/views/welcome/index.html.erb
+++ b/2/Lab-XSS-RubyonRails/app/views/welcome/index.html.erb
@@ -41,7 +41,7 @@
     </div>
 </nav>
 
-<h1>Welcome to our website <%= params[:name].html_safe %></h1>
+<h1>Welcome to our website <%= params[:name].present? ? params[:name].html_safe : '' %></h1>
 <div class="container pt-5">
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
